# grc-program

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-report.yml
data/: agent_inventory.yaml  config.yaml  controls.yaml  domains.yaml  enterprise.yaml  estimators.yaml  evidence.yaml  guardrails.yaml  horizon.yaml  initiatives.yaml  kris.yaml  named_risks.yaml  okrs.yaml  policies.yaml  regulations.yaml  risks.yaml  sla_config.yaml
data/exceptions/: EXC-2026-0118.yaml  EXC-2026-0119.yaml  EXC-2026-0120.yaml  EXC-2026-0121.yaml  EXC-2026-0122.yaml  EXC-2026-0123.yaml  EXC-2026-0124.yaml  EXC-2026-0125.yaml  EXC-2026-0126.yaml  EXC-2026-0127.yaml  EXC-2026-0128.yaml  EXC-2026-0133.yaml  EXC-2026-0134.yaml  EXC-2026-0135.yaml  EXC-2026-0140.yaml  EXC-2026-0142.yaml  EXC-2026-0149.yaml  EXC-2026-0151.yaml  EXC-2026-0160.yaml  EXC-2026-0161.yaml  (+29 more)
docs/: brand.md  corpus-stories.md  dashboard.html  engine.md  example-report.html  example-report.md  grc.html  methodology.md  next-steps.md  schema.md
examples/: generate_corpus.py  generate_ecosystem.py
risk_ledger/: __init__.py  cli.py  config.py  dashboard.py  engine.py  graph.py  graph_engine.py  graph_views.py  grc.py  loader.py  models.py  montecarlo.py  render.py  render_grc.py  render_svg.py  report.py  validation.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_demo_corpus.py  test_engine.py  test_graph.py  test_graph_engine.py  test_graph_views.py  test_grc.py  test_montecarlo.py  test_remediations.py  test_render.py  test_render_svg.py  test_validation.py  test_views.py
(+129 files in other folders)
